Fix to prevent empty columns collapsing horizontally.

--- a/simplegrid.css
+++ b/simplegrid.css
@@ -18,6 +18,7 @@ body {
 
 [class*='col-'] {
 	float: left;
+  min-height: 1px;
 	padding-right: 20px; /* column-space */
 }
 
